--- a/package.json
+++ b/package.json
@@ -8,8 +8,21 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/aspect-ratio": "^0.2.0",
+    "@tailwindcss/forms": "^0.2.1",
+    "@tailwindcss/typography": "^0.4.0",
+    "autoprefixer": "^10.2.4",
+    "firebase": "^8.2.6",
+    "lodash.debounce": "^4.0.8",
+    "lodash.kebabcase": "^4.1.1",
     "next": "10.0.6",
+    "postcss": "^8.2.5",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "react-firebase-hooks": "^2.2.0",
+    "react-hot-toast": "^1.0.2",
+    "react-icons": "^4.2.0",
+    "stylelint-config-recommended": "^3.0.0",
+    "tailwindcss": "^2.0.2"
   }
 }
