--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-firebase-hooks": "^2.2.0",
     "react-hot-toast": "^1.0.2",
     "react-icons": "^4.2.0",
+    "react-markdown": "^5.0.3",
     "stylelint-config-recommended": "^3.0.0",
     "tailwindcss": "^2.0.2"
   }
