--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/typography": "^0.4.0",
     "autoprefixer": "^10.2.4",
+    "date-fns": "^2.17.0",
     "firebase": "^8.2.6",
     "lodash.debounce": "^4.0.8",
     "lodash.kebabcase": "^4.1.1",
