--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "lodash.kebabcase": "^4.1.1",
     "next": "10.0.6",
     "postcss": "^8.2.5",
+    "postcss-preset-env": "^6.7.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-firebase-hooks": "^2.2.0",
